Issue #26822: itemgetter, attrgetter and methodcaller objects no longer silently ignore keyword arguments.